# mes

./: .dir-locals.el  .gitignore  AUTHORS  BLURB  BOOTSTRAP  ChangeLog  HACKING  INSTALL  M2-COMPAT  M2-README  M2-build.sh  M2-compile.sh  M2-test.sh  Makefile.am  NEWS  PORTING  README  ROADMAP  autogen.sh  configure  configure.ac  configure.sh  guix.scm  kaem.run  simple.make  simple.sh
lib/: .gitignore  Makefile.am  configure.ac  libc+gnu.c  libc+tcc.c  libc.c  libg.c  libmes.c  libtcc1.c  local.mk
lib/arm-mes/: arm.M1  elf-0footer.hex2  elf32-0header.hex2  elf32-body-exit-42.hex2  elf32-footer-single-main.hex2  elf32-header.hex2
lib/arm-mes-gcc/: setjmp.c
lib/arm-mes-mescc/: setjmp.c
lib/assert/: assert.c
lib/ctype/: isalnum.c  isalpha.c  isascii.c  iscntrl.c  isdigit.c  isgraph.c  islower.c  isnumber.c  isprint.c  ispunct.c  isspace.c  isupper.c  isxdigit.c  tolower.c  toupper.c
lib/dirent/: __getdirentries.c  closedir.c  opendir.c  readdir.c
lib/freebsd/x86-mes/: elf32-0exit-42.hex2  elf32-0header.hex2  elf32-0hello-mes.hex2  elf32-body-exit-42.hex2  elf32-body-hello-mes.hex2  elf32-header.hex2
lib/freebsd/x86-mes-gcc/: crt1.c  exit-42.S  hello-mes.S  mini.c
lib/freebsd/x86-mes-mescc/: crt1.c  mini.c
lib/gnu/: _exit.c  _open3.c  _read.c  _write.c  dir-lookup.c  exec-startup-get-data.c  fd-get.c  fd-read.c  fd-write.c  hurd-start.c  io-read.c  io-write.c  malloc.c  proc-mark-exit.c  syscall.c  task-get-special-port.c  task-terminate.c  vm-allocate.c  vm-statistics.c
lib/gnu/x86-mes-gcc/: crt1.c  mini.c
lib/linux/: _getcwd.c  _open3.c  _read.c  access.c  brk.c  chdir.c  chmod.c  clock_gettime.c  close.c  dup.c  dup2.c  execve.c  fcntl.c  fork.c  fstat.c  fsync.c  getdents.c  getegid.c  geteuid.c  getgid.c  getpid.c  getppid.c  getrusage.c  gettimeofday.c  getuid.c  gnu.c  ioctl.c  kill.c  libc-mini.c  libc.c  link.c  lseek.c  lstat.c  mkdir.c  mknod.c  mmap.c  munmap.c  nanosleep.c  pipe.c  read.c  (+13 more)
lib/linux/aarch64-mes/: elf64-0exit-42.hex2  elf64-0header.hex2  elf64-0hello-mes.hex2  elf64-body-exit-42.hex2  elf64-body-hello-mes.hex2  elf64-footer-single-main.hex2  elf64-header.hex2
lib/linux/aarch64-mes-gcc/: crt1.c  exit-42.S  hello-mes.S  mini.c  syscall-internal.c  syscall.c
lib/linux/arm-mes/: crt1.c  mes.c  mini.c
lib/linux/arm-mes-gcc/: _exit.c  _write.c  crt1.c  mini.c  syscall-internal.c  syscall.c
lib/linux/arm-mes-mescc/: crt1.c  mini.c  syscall-internal.c  syscall.c
lib/linux/x86-mes/: elf32-0exit-42.hex2  elf32-0header.hex2  elf32-0hello-mes.hex2  elf32-body-exit-42.hex2  elf32-body-hello-mes.hex2  elf32-header.hex2  mes.c
lib/linux/x86-mes-gcc/: crt0.c  crt1.c  crti.c  exit-42.S  hello-mes.S  mes.c  mini.c  syscall-internal.c  syscall.c
lib/linux/x86-mes-m2/: crt1.M1
lib/linux/x86-mes-mescc/: crt1.c  exit-42.S  hello-mes.S  mini.c  syscall-internal.c  syscall.c
lib/linux/x86_64-mes/: elf64-0exit-42.hex2  elf64-0header.hex2  elf64-0hello-mes.hex2  elf64-body-exit-42.hex2  elf64-body-hello-mes.hex2  elf64-header.hex2  mes.c
lib/linux/x86_64-mes-gcc/: crt0.c  crt1.c  exit-42.S  hello-mes.S  mes.c  mini.c  syscall-internal.c  syscall.c
lib/linux/x86_64-mes-mescc/: crt1.c  exit-42.S  hello-mes.S  mini.c  syscall-internal.c  syscall.c
lib/m2/: _getcwd.c  abtol.c  access.c  atoi.c  chmod.c  clock_gettime.c  dup.c  dup2.c  execve.c  fdputc.c  fork.c  getenv.c  isatty.c  malloc.c  memchr.c  memcmp.c  memcpy.c  memset.c  missing.hex2  ntoab.c  read.c  setenv.c  strcmp.c  strcpy.c  strlen.c  strncmp.c  time.c  unlink.c  waitpid.c
lib/mach/: mach-init.c
lib/math/: ceil.c  fabs.c  floor.c  labs.c
lib/mes/: __assert_fail.c  __buffered_read.c  __mes_debug.c  abtod.c  abtol.c  div.c  dtoab.c  eputc.c  eputs.c  fdgetc.c  fdgets.c  fdputc.c  fdputs.c  fdungetc.c  itoa.c  ltoa.c  ltoab.c  mes_open.c  mini-write.c  ntoab.c  oputc.c  oputs.c  search-path.c  ultoa.c  utoa.c
lib/posix/: alarm.c  buffered-read.c  execl.c  execlp.c  execv.c  execvp.c  getcwd.c  getenv.c  getopt.c  isatty.c  mktemp.c  open.c  raise.c  sbrk.c  setenv.c  sleep.c  unsetenv.c  wait.c  write.c
lib/stdio/: clearerr.c  fclose.c  fdopen.c  feof.c  ferror.c  fflush.c  fgetc.c  fgets.c  fileno.c  fopen.c  fprintf.c  fputc.c  fputs.c  fread.c  freopen.c  fscanf.c  fseek.c  ftell.c  fwrite.c  getc.c  getchar.c  perror.c  printf.c  putc.c  putchar.c  remove.c  rewind.c  snprintf.c  sprintf.c  sscanf.c  ungetc.c  vfprintf.c  vfscanf.c  vprintf.c  vsnprintf.c  vsprintf.c  vsscanf.c
lib/stdlib/: __exit.c  abort.c  abs.c  alloca.c  atexit.c  atof.c  atoi.c  atol.c  bsearch.c  calloc.c  exit.c  free.c  malloc.c  mbstowcs.c  puts.c  qsort.c  realloc.c  strtod.c  strtof.c  strtol.c  strtold.c  strtoll.c  strtoul.c  strtoull.c
lib/string/: __memmove.c  argz-count.c  argz-extract.c  bcmp.c  bcopy.c  bzero.c  index.c  memchr.c  memcmp.c  memcpy.c  memmem.c  memmove.c  memset.c  rindex.c  strcat.c  strchr.c  strcmp.c  strcpy.c  strcspn.c  strdup.c  strerror.c  strlen.c  strlwr.c  strncat.c  strncmp.c  strncpy.c  strpbrk.c  strrchr.c  strspn.c  strstr.c  strtok.c  strupr.c
lib/stub/: __cleanup.c  _getcwd.c  _open3.c  access.c  asctime.c  atan2.c  brk.c  bsearch.c  chmod.c  chown.c  clock_gettime.c  close.c  cos.c  ctime.c  dup.c  dup2.c  execve.c  exp.c  fork.c  fpurge.c  freadahead.c  frexp.c  getgrgid.c  getgrnam.c  getlogin.c  getpgid.c  getpgrp.c  getpwnam.c  getpwuid.c  gettimeofday.c  gmtime.c  ioctl.c  ldexp.c  localtime.c  log.c  lseek.c  mktime.c  modf.c  mprotect.c  pclose.c  (+28 more)
lib/tests/assert/: 50-assert.c
lib/tests/dirent/: 90-readdir.c
lib/tests/io/: 90-stat.c
lib/tests/mes/: 30-eputs.c  30-oputs.c  30-oputs.stdout  50-itoa.c  90-abtod.c  90-dtoab.c
lib/tests/posix/: 50-getenv.c  50-open-read.c  90-execlp.c  90-unsetenv.c  getenv.stdout
lib/tests/scaffold/: 01-return-0.c  02-return-1.c  03-call.c  04-call-0.c  05-call-1.c  06-call-2.c  07-include.c  (+154 more)
lib/x86-mes/: x86.M1
lib/x86-mes-gcc/: setjmp.c
lib/x86-mes-mescc/: exit-42.c  setjmp.c
lib/x86_64-mes/: x86_64.M1
lib/x86_64-mes-gcc/: setjmp.c
lib/x86_64-mes-mescc/: exit-42.c  setjmp.c
(+497 files in other folders)
